<resources>
    <string name="app_name">爱学习</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_phone">This phone is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forget_password">忘记密码？</string>
    <string name="regist">注册</string>
    <string name="regist_name">昵称</string>
    <string name="regist_phone">手机号</string>
    <string name="regist_password">密码</string>
    <string name="regist_zhuce">注册码</string>
    <string name="regist_button_text">获取验证码</string>
    <string name="regist_button_sure">注册</string>
    <string name="regist_button_cancel">取消</string>
    <string name="title_regist_text">注册</string>
    <string name="title_forget_text">找回密码</string>
    <string name="title_login_text">登录</string>
    <string name="myfragment_login_text">不登录玩个蛇</string>
    <string name="forget_text_phone">请输入账号/手机号</string>
    <string name="forget_text_yanzheng">验证码</string>
    <string name="text_sure">确定</string>
    <string name="text_cancel">取消</string>
    <string name="dialog_custom_layout_text">温馨提示</string>

</resources>
