<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ForgetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title_forget_text"
            android:textColor="@color/dark"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/forget_edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_text_phone"
            android:theme="@style/MyEditText"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/forget_text_yanzheng"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/forget_text_yanzheng"
                android:theme="@style/MyEditText"/>

            <Button
                android:id="@+id/forget_button_yanzheng"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regist_button_text"
                android:background="@drawable/sign_button"/>

        </LinearLayout>

      <LinearLayout
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <Button
              android:id="@+id/forget_button_sure"
              android:gravity="center"
              android:layout_gravity="center"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_sure"
              android:background="@drawable/sign_button"/>

          <Button
              android:id="@+id/forget_button_cancel"
              android:gravity="center"
              android:layout_gravity="center"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_cancel"
              android:background="@drawable/sign_button"/>

      </LinearLayout>

    </LinearLayout>
</LinearLayout>